added key to .env

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 MONGO_URI=mongodb+srv://avt17:s0lidworks23**@journee.0onns.mongodb.net/journee?retryWrites=true&w=majority
+GOOGLE_MAPS_API_KEY=AIzaSyCfS2LH0L2Phby2jXEwwnh57PRjWATdYR0
