--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,29 @@
-Flask
-pymongo[srv]
-Flask-PyMongo
-Flask-Cors
-surprise
-Flask-SocketIO
-celery
-redis
-python-dotenv
-requests
-dotenv
-pyjwt
-geopy
+blinker==1.9.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+dnspython==2.7.0
+Flask==3.1.0
+flask-cors==5.0.1
+Flask-PyMongo==3.0.1
+geographiclib==2.0
+geopy==2.4.1
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+joblib==1.4.2
+MarkupSafe==3.0.2
+numpy==1.24.4
+pandas==2.2.3
+PyJWT==2.10.1
+pymongo==4.12.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+pytz==2025.2
+requests==2.32.3
+scikit-surprise==1.1.4
+scipy==1.15.2
+six==1.17.0
+tzdata==2025.2
+urllib3==2.4.0
+Werkzeug==3.1.3
